--- a/src/components/Pages/Prysm/components/PrysmAmountSlider/PrysmAmountSlider.scss
+++ b/src/components/Pages/Prysm/components/PrysmAmountSlider/PrysmAmountSlider.scss
@@ -68,7 +68,7 @@
   .prysmAmountSlider {
     .sliderItem {
       width:     100%;
-      max-width: 20rem;
+      max-width: 16rem;
       ul {
         margin-bottom: 2rem;
       }
